Let test plan templates be a crd instead of maintained in the database

--- a/milky-way-api/src/integrationTest/resources/test-templates/1.yaml
+++ b/milky-way-api/src/integrationTest/resources/test-templates/1.yaml
@@ -1,7 +1,7 @@
 apiVersion: sushigumi.dev/v1
 kind: TestTemplate
 metadata:
-  name: dummy-test-job
+  name: test-template-1
 spec:
   group: group1
   container:
